--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,10 @@
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
     "graphql": "16.6.0",
-    "moment": "^2.29.4",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.1.0",
     "react-router": "6.4.0",
     "react-router-dom": "6.4.0",
     "react-scripts": "5.0.1",
@@ -58,6 +59,8 @@
     "@graphql-codegen/typescript": "2.7.3",
     "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.3.3",
+    "@types/leaflet": "^1.9.0",
+    "@types/react-leaflet": "^2.8.2",
     "concurrently": "7.4.0",
     "prettier": "2.7.1"
   }
