--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "MingaEaforschnLogo.jpg",
+      "src": "MingaEaforschnLogo.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "MingaEaforschnLogo.jpg",
+      "src": "MingaEaforschnLogo.png",
       "type": "image/jpg",
       "sizes": "192x192"
     },
     {
-      "src": "MingaEaforschnLogo.jpg",
+      "src": "MingaEaforschnLogo.png",
       "type": "image/jpg",
       "sizes": "512x512"
     }
