--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "leaflet": "^1.9.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.1.0",
     "react-router": "6.4.0",
